--- a/RisingSea/CategoriesSheaves.tex
+++ b/RisingSea/CategoriesSheaves.tex
@@ -652,7 +652,7 @@ As alluded to in the previous proof, Yoneda's lemma is an important tool in cate
 \begin{exer}[\ib{Yoneda's Lemma}]
 Let $A$ and $A'$ be objects in $\mathscr{C}$. Suppose we are given a family of maps
 $$i_C : \hom(C,A) \to \hom(C,A') $$
-such that given any $f: C \to B$, the following diagram commutes
+such that given any $f: B \to C$, the following diagram commutes
 $$\xymatrix{
 \hom(C,A) \ar[r]^{i_C} \ar[d]  & \hom(C,A') \ar[d] \\
 \hom(B,A) \ar[r]_{i_B} & \hom(B,A')
@@ -666,12 +666,14 @@ where the vertical maps are given by precomposition with $f$.
 %
 \begin{proof} \enumbreak
 \begin{enumerate}
-\item Let $C = A$, in which case we have the map $i_A : \hom(A,A) \to \hom(A,A')$. We claim that the map $g :  A \to A'$ we are looking for is $i_A(\id_A)$. We note that the following diagram commutes
+\item Let $C = A$, in which case we have the map $i_A : \hom(A,A) \to \hom(A,A')$. We claim that the map $g :  A \to A'$ we are looking for is $i_A(\id_A)$. We first show that composition with $g = i_A(\id_A)$ satsifies the conditions we desire, i.e. that the following diagram commutes for any map $f: B \to C$
 $$\xymatrix{
-\hom(A,A) \ar[d] \ar[r]^{i_A} & \hom(A,A') \ar[d] \\
-\hom(A,A) \ar[r]_{i_A} & \hom(A,A')
+\hom(C,A) \ar[d] \ar[r]^{i_A} & \hom(C,A') \ar[d] \\
+\hom(B,A) \ar[r]_{i_A} & \hom(B,A')
 }$$
+Chasing the diagram reveals that the diagram commutes, since any map $\varphi \in \hom(C,A)$ gets mapped to $i_A(\id_A) \circ \varphi \circ f \in \hom(B,A')$. We now want to show that this map is unique.
 \end{enumerate}
+
 \end{proof}
 %
 \end{document}
